# libi2pd-builds

./: phony.c  readme.md  xmake.lua
.github/workflows/: ci.yml
cmake/: CMakeLists.txt  mingw32-make
